vlib/v/checker/tests/map_of_generic_struct_init_err.vv
struct Item<T>{
	val T
}

fn main() {
	mut m := map[string]Item{}
}
